Data Loader 1.6 and 40k data

--- a/Noteboooks/Weekly_Reports_CNN.ipynb
+++ b/Noteboooks/Weekly_Reports_CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Weekly_Reports_CNN.ipynb to python\n",
-      "[NbConvertApp] Writing 25584 bytes to Weekly_Reports_CNN.py\n"
+      "[NbConvertApp] Writing 16503 bytes to Weekly_Reports_CNN.py\n"
      ]
     }
    ],
@@ -45,11 +45,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: truth_DR12Q.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU       6   ()      \n",
+      "  1                1 BinTableHDU     27   546856R x 9C   [J, D, J, J, J, J, J, D, D]   \n",
+      "INFO: None /n ColDefs(\n",
+      "    name = 'THING_ID'; format = 'J'\n",
+      "    name = 'Z_VI'; format = 'D'\n",
+      "    name = 'PLATE'; format = 'J'\n",
+      "    name = 'MJD'; format = 'J'\n",
+      "    name = 'FIBERID'; format = 'J'\n",
+      "    name = 'CLASS_PERSON'; format = 'J'\n",
+      "    name = 'Z_CONF_PERSON'; format = 'J'\n",
+      "    name = 'BAL_FLAG_VI'; format = 'D'\n",
+      "    name = 'BI_CIV'; format = 'D'\n",
+      ")\n",
+      "Filename: data_dr12.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU       8   (886, 639464)   float64   \n",
+      "  1                1 BinTableHDU     16   639464R x 4C   [J, J, J, J]   \n",
+      "INFO: None /n ColDefs(\n",
+      "    name = 'TARGETID'; format = 'J'\n",
+      "    name = 'PLATE'; format = 'J'\n",
+      "    name = 'MJD'; format = 'J'\n",
+      "    name = 'FIBERID'; format = 'J'\n",
+      ")\n",
+      "Star: (207915,)\n",
+      "Galaxy: (22795,)\n",
+      "QSO: (270686,)\n",
+      "QSO BAL: (29659,)\n",
+      "NN: (15801,)\n"
+     ]
+    }
+   ],
    "source": [
-    "N_sample=40000\n",
+    "N_sample=1000\n",
     "\n",
     "def Load_Files(file_1,file_2,N_sample,classification=True):\n",
     "    hdul = fits.open(file_1) # Open file 1 -- 'truth_DR12Q.fits'\n",
@@ -161,18 +198,25 @@
     "    indi=np.concatenate((ind_star, ind_galaxy,ind_qso,ind_qso_bal), axis=None)\n",
     "    indi1=ind.loc[indi].values\n",
     "\n",
-    "    spectra_=np.zeros((N_sample,443))\n",
+    "    spectra_=np.zeros((N_sample,886))\n",
     "    j=0\n",
     "    for i in indi:\n",
     "        k=indi1[j,1]\n",
-    "        spectra_[j,:]=np.log(abs(spectra[k,:443]))\n",
+    "        spectra_[j,:]=spectra[k,:]#np.log(abs(spectra[k,:443]))\n",
     "        j=j+1    \n",
     "    spectra_=pd.DataFrame(spectra_)\n",
-    "    X=spectra_.replace(-np.inf,0)\n",
+    "    #X=spectra_.replace(-np.inf,0)\n",
     "\n",
+    "    X=spectra_.values\n",
+    "    #X=X.values # Spectra\n",
+    "    mean_flx= np.ma.average(X[:,:443], weights=X[:,443:],axis=1)\n",
+    "    print(mean_flx.reshape(-1,1).shape)\n",
+    "    ll=(X[:,:443]-mean_flx.reshape(-1,1))**2\n",
     "\n",
-    "    X=X.values # Spectra\n",
-    "    \n",
+    "    aveflux=np.ma.average(ll, weights=spectra[:,443:],axis=1)\n",
+    "    sflux = np.sqrt(aveflux)\n",
+    "    X = (X[:,:443]-mean_flx.reshape(-1,1))/sflux.reshape(-1,1)\n",
+    "    print(X.shape)\n",
     "    if(classification!=True):\n",
     "        y=sample_objects['Z_VI']\n",
     "        y=np.array(y,dtype=float)\n",
@@ -181,12 +225,14 @@
     "        y=sample_objects['CLASS_PERSON']\n",
     "        y=y.replace([1, 4, 3, 30], [0,1,2,3]).values\n",
     "        y=np.array(y,dtype=float)\n",
-    "        return X,y"
+    "        return X,y\n",
+    "    \n",
+    "X,y=Load_Files('truth_DR12Q.fits','data_dr12.fits',N_sample,classification=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -265,10 +311,16 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/steingate/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:117: RuntimeWarning: divide by zero encountered in log\n"
+     "ename": "TypeError",
+     "evalue": "1D weights expected when shapes of a and weights differ.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-2d0b046cc483>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mLoad_Files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'truth_DR12Q.fits'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'data_dr12.fits'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mN_sample\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mclassification\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_loader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mval_loader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mN_sample\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepoc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-20-e8da16cea6f5>\u001b[0m in \u001b[0;36mLoad_Files\u001b[0;34m(file_1, file_2, N_sample, classification)\u001b[0m\n\u001b[1;32m    124\u001b[0m     \u001b[0mmean_flx\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m443\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m443\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0mll\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m443\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mmean_flx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m     \u001b[0maveflux\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mll\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mspectra\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m443\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    127\u001b[0m     \u001b[0msflux\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maveflux\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m443\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mmean_flx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0msflux\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/numpy/ma/extras.py\u001b[0m in \u001b[0;36maverage\u001b[0;34m(a, axis, weights, returned)\u001b[0m\n\u001b[1;32m    593\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mwgt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    594\u001b[0m                 raise TypeError(\n\u001b[0;32m--> 595\u001b[0;31m                     \"1D weights expected when shapes of a and weights differ.\")\n\u001b[0m\u001b[1;32m    596\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mwgt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    597\u001b[0m                 raise ValueError(\n",
+      "\u001b[0;31mTypeError\u001b[0m: 1D weights expected when shapes of a and weights differ."
      ]
     }
    ],
@@ -279,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true,
     "tags": [
@@ -287,97 +339,7 @@
      "Classification"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Net(\n",
-      "  (conv1): Conv1d(1, 100, kernel_size=(10,), stride=(2,))\n",
-      "  (conv2): Conv1d(100, 100, kernel_size=(10,), stride=(2,))\n",
-      "  (conv3): Conv1d(100, 100, kernel_size=(10,), stride=(2,))\n",
-      "  (conv4): Conv1d(100, 100, kernel_size=(10,), stride=(2,))\n",
-      "  (pool): MaxPool1d(kernel_size=2, stride=1, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (fc1): Linear(in_features=1800, out_features=16, bias=True)\n",
-      "  (fc2): Linear(in_features=16, out_features=4, bias=True)\n",
-      ")\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/steingate/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:34: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch: 0 <--> Loss: 1.3930145502090454\n",
-      "Batch: 1 <--> Loss: 2.770660638809204\n",
-      "Batch: 2 <--> Loss: 4.13703989982605\n",
-      "Batch: 3 <--> Loss: 5.494992733001709\n",
-      "Batch: 4 <--> Loss: 6.841831803321838\n",
-      "Batch: 5 <--> Loss: 8.17174220085144\n",
-      "Batch: 0 <--> Loss: 1.3250025510787964\n",
-      "Batch: 1 <--> Loss: 2.6101783514022827\n",
-      "Batch: 2 <--> Loss: 3.884714126586914\n",
-      "Batch: 3 <--> Loss: 5.154500603675842\n",
-      "Batch: 4 <--> Loss: 6.413445711135864\n",
-      "Batch: 5 <--> Loss: 7.632982492446899\n",
-      "Batch: 0 <--> Loss: 1.233906865119934\n",
-      "Batch: 1 <--> Loss: 2.453781485557556\n",
-      "Batch: 2 <--> Loss: 3.62451171875\n",
-      "Batch: 3 <--> Loss: 4.783947229385376\n",
-      "Batch: 4 <--> Loss: 5.924830913543701\n",
-      "Batch: 5 <--> Loss: 7.037012100219727\n",
-      "Batch: 0 <--> Loss: 1.1044259071350098\n",
-      "Batch: 1 <--> Loss: 2.181097388267517\n",
-      "Batch: 2 <--> Loss: 3.227661967277527\n",
-      "Batch: 3 <--> Loss: 4.26640510559082\n",
-      "Batch: 4 <--> Loss: 5.274618744850159\n",
-      "Batch: 5 <--> Loss: 6.268080949783325\n",
-      "Batch: 0 <--> Loss: 1.0746630430221558\n",
-      "Batch: 1 <--> Loss: 2.082397937774658\n",
-      "Batch: 2 <--> Loss: 3.0710853338241577\n",
-      "Batch: 3 <--> Loss: 3.998762547969818\n",
-      "Batch: 4 <--> Loss: 4.954934298992157\n",
-      "Batch: 5 <--> Loss: 5.899255096912384\n",
-      "Batch: 0 <--> Loss: 0.9021279811859131\n",
-      "Batch: 1 <--> Loss: 1.829971432685852\n",
-      "Batch: 2 <--> Loss: 2.720361888408661\n",
-      "Batch: 3 <--> Loss: 3.589102327823639\n",
-      "Batch: 4 <--> Loss: 4.456362187862396\n",
-      "Batch: 5 <--> Loss: 5.302618980407715\n",
-      "Batch: 0 <--> Loss: 0.8044831156730652\n",
-      "Batch: 1 <--> Loss: 1.6404357552528381\n",
-      "Batch: 2 <--> Loss: 2.435157835483551\n",
-      "Batch: 3 <--> Loss: 3.206096589565277\n",
-      "Batch: 4 <--> Loss: 4.004977285861969\n",
-      "Batch: 5 <--> Loss: 4.8664039969444275\n",
-      "Batch: 0 <--> Loss: 0.7661776542663574\n",
-      "Batch: 1 <--> Loss: 1.5130640268325806\n",
-      "Batch: 2 <--> Loss: 2.2890341877937317\n",
-      "Batch: 3 <--> Loss: 2.995192527770996\n",
-      "Batch: 4 <--> Loss: 3.715143084526062\n",
-      "Batch: 5 <--> Loss: 4.420612871646881\n",
-      "Batch: 0 <--> Loss: 0.6815415620803833\n",
-      "Batch: 1 <--> Loss: 1.3687890768051147\n",
-      "Batch: 2 <--> Loss: 2.038845181465149\n",
-      "Batch: 3 <--> Loss: 2.78854238986969\n",
-      "Batch: 4 <--> Loss: 3.6257612109184265\n",
-      "Batch: 5 <--> Loss: 4.321409583091736\n",
-      "Batch: 0 <--> Loss: 0.7359641790390015\n",
-      "Batch: 1 <--> Loss: 1.4219485521316528\n",
-      "Batch: 2 <--> Loss: 2.1418030858039856\n",
-      "Batch: 3 <--> Loss: 2.8389594554901123\n",
-      "Batch: 4 <--> Loss: 3.5240078568458557\n",
-      "Batch: 5 <--> Loss: 4.188405871391296\n",
-      "Finished Training\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# CNN for classification\n",
     "import torch\n",
