--- a/Noteboooks/Weekly_Reports_CNN.ipynb
+++ b/Noteboooks/Weekly_Reports_CNN.ipynb
@@ -883,7 +883,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fdsa"
+   ]
   },
   {
    "cell_type": "code",
