Data Loader 2.3 and 40k data. Regression and dropout

--- a/Noteboooks/Weekly_Reports_CNN.ipynb
+++ b/Noteboooks/Weekly_Reports_CNN.ipynb
@@ -173,7 +173,6 @@
     "    X=spectra_.values\n",
     "    #X=X.values # Spectra\n",
     "    mean_flx= np.ma.average(X[:,:443], weights=X[:,443:],axis=1)\n",
-    "    print(mean_flx.reshape(1,-1).shape)\n",
     "    ll=(X[:,:443]-mean_flx.reshape(-1,1))**2\n",
     "\n",
     "    aveflux=np.ma.average(ll, weights=X[:,443:],axis=1)\n",
@@ -229,6 +228,11 @@
     "        val_data.append([Variable(torch.tensor(xv, dtype=torch.float)), torch.tensor(y_val[i], dtype=torch.long)])\n",
     "    \n",
     "    val_loader = torch.utils.data.DataLoader(val_data, shuffle=True, batch_size=batch_size)\n",
+    "    \n",
+    "    print('INFO')\n",
+    "    print('Train shape:',y_train.shape[0])\n",
+    "    print('Val shape:',y_val.shape[0])\n",
+    "    print('Test shape:',y_test.shape[0])\n",
     "    return train_loader,test_loader,val_loader"
    ]
   },
