Data Loader 2.4 and 40k data. Regression and dropout

--- a/Noteboooks/Weekly_Reports_CNN.ipynb
+++ b/Noteboooks/Weekly_Reports_CNN.ipynb
@@ -179,7 +179,7 @@
     "    sflux = np.sqrt(aveflux)\n",
     "    X = (X[:,:443]-mean_flx.reshape(-1,1))/sflux.reshape(-1,1)\n",
     "    \n",
-    "    print(X.shape)\n",
+    "    #print(X.shape)\n",
     "    \n",
     "    if(classification!=True):\n",
     "        y=sample_objects['Z_VI']\n",
