Data Loader 3.0 and 80k data. Regression and dropout

--- a/Noteboooks/SpectraNET.ipynb
+++ b/Noteboooks/SpectraNET.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook SpectraNET.ipynb to python\n",
-      "[NbConvertApp] Writing 25837 bytes to SpectraNET.py\n"
+      "[NbConvertApp] Writing 25858 bytes to SpectraNET.py\n",
+      "cpu\n"
      ]
     }
    ],
@@ -40,19 +41,27 @@
     "from torch.autograd import Variable\n",
     "import torch.utils.data\n",
     "import time\n",
+    "import os\n",
     "\n",
-    "!jupyter nbconvert --to python SpectraNET.ipynb"
+    "cmd='jupyter nbconvert --to python SpectraNET.ipynb'\n",
+    "os.system(cmd)\n",
+    "\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Assuming that we are on a CUDA machine, this should print a CUDA device:\n",
+    "\n",
+    "print(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "start=time.time()\n",
     "\n",
-    "N_sample=50000\n",
+    "N_sample=80000\n",
     "\n",
     "def Load_Files(file_1,file_2,N_sample,classification=True):\n",
     "    hdul = fits.open(file_1) # Open file 1 -- 'truth_DR12Q.fits'\n",
@@ -195,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,19 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/steingate/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 216, got 192\n",
-      "  return f(*args, **kwds)\n",
-      "/home/steingate/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 216, got 192\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -300,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true,
     "tags": [
@@ -320,7 +319,7 @@
     "\n",
     "\n",
     "learning_rate=0.1\n",
-    "#log_interval=10\n",
+    "log_interval=10\n",
     "epoc=10\n",
     "class Net_C(nn.Module):\n",
     "    def __init__(self):\n",
@@ -375,7 +374,8 @@
       "  (pool): MaxPool1d(kernel_size=2, stride=1, padding=0, dilation=1, ceil_mode=False)\n",
       "  (fc1): Linear(in_features=1800, out_features=16, bias=True)\n",
       "  (fc2): Linear(in_features=16, out_features=4, bias=True)\n",
-      "  (dropout): Dropout(p=0.1)\n",
+      "  (dropout): Dropout(p=0.25)\n",
+      "  (bn): BatchNorm1d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       ")\n",
       "Epoc: 1\n"
      ]
@@ -384,18 +384,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/steingate/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:41: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch: 1 <--> Loss: 1.393609881401062\n",
-      "Batch: 2 <--> Loss: 1.384644865989685\n",
-      "Batch: 3 <--> Loss: 1.3439902067184448\n",
-      "Batch: 4 <--> Loss: 1.2943564653396606\n",
-      "Batch: 5 <--> Loss: 1.251931071281433\n"
+      "/home/steingate/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:43: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n"
      ]
     }
    ],
@@ -412,7 +401,7 @@
     "loss_=[]\n",
     "def train(epoch):\n",
     "    #model.train()\n",
-    "    scheduler.step()\n",
+    "    scheduler.step(0)\n",
     "    running_loss = 0.0\n",
     "    for batch_idx, (data, target) in enumerate(train_loader,0):\n",
     "        data, target = Variable(data), Variable(target)\n",
@@ -435,7 +424,6 @@
     "            #print('[%d, %5d] loss: %.3f' %(epoch + 1, i + 1, running_loss / 1000))\n",
     "            #running_loss = 0.0\n",
     "    \n",
-    "4\n",
     "\n",
     "# Training loop\n",
     "for i in range(epoc):\n",
