Data Loader 3.3 and 80k data. Classification and Regression. Dropout, LR Reduce plateau and Batch Norm

--- a/Noteboooks/SpectraNET.ipynb
+++ b/Noteboooks/SpectraNET.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "# Assuming that we are on a CUDA machine, this should print a CUDA device:\n",
     "\n",
-    "print(device)"
+    "print('This net is brought to you by',device)"
    ]
   },
   {
@@ -75,7 +75,7 @@
     "n_train=int(N_sample*(1-test_size)*(1-val_size))\n",
     "epochs = int(n_iter / (n_train / batch_size))\n",
     "\n",
-    "print('Epochs:{} -- Batch size:{}'.format(epochs,batch_size))"
+    "print('INFO: Epochs:{} -- Batch size:{}'.format(epochs,batch_size))"
    ]
   },
   {
@@ -125,11 +125,12 @@
     "    N_C=N_C[N_C!=3]\n",
     "    N_C=N_C[N_C!=1]\n",
     "    N_C=N_C[N_C!=4] # objects wrong classified\n",
-    "    print('Star:',STAR.shape)\n",
-    "    print('Galaxy:',GALAXY.shape)\n",
-    "    print('QSO:',QSO.shape)\n",
-    "    print('QSO BAL:',QSO_BAL.shape)\n",
-    "    print('NN:',N_C.shape)\n",
+    "    print('INFO:')\n",
+    "    print('Star:',STAR.shape[0])\n",
+    "    print('Galaxy:',GALAXY.shape[0])\n",
+    "    print('QSO:',QSO.shape[0])\n",
+    "    print('QSO BAL:',QSO_BAL.shape[0])\n",
+    "    print('NN:',N_C.shape[0])\n",
     "    \n",
     "    # I create two DataFrame for Superset_DR12Q and data_dr12 with only three parameters\n",
     "    data1={'PLATE':data_PLATE_1,'MJD':data_MJD_1,'FIBERID':data_FIBERID_1,'ID':data_ID_1}\n",
@@ -159,7 +160,7 @@
     "    data_CO_objects=data_CO[0] # The unique new ID of each element in both sets\n",
     "    data_CO_ind1=data_CO[1] # Indices of intersected elements from the original data 1 (Superset_DR12Q.fits) \n",
     "    data_CO_ind2=data_CO[2] # Indices of intersected elements form the original data 2 (data_dr12.fits)\n",
-    "    print('I find',len(data_CO_objects),'objects with spectra from DR12')\n",
+    "    print('INFO: I find',len(data_CO_objects),'objects with spectra from DR12')\n",
     "    #print(data_CO_ind1,data_CO_ind2)\n",
     "    indi={'ind1':data_CO_ind1,'ind2':data_CO_ind2}\n",
     "    ind=pd.DataFrame(data=indi,index=data_CO_ind1)\n",
@@ -259,7 +260,7 @@
     "    \n",
     "    val_loader = torch.utils.data.DataLoader(val_data, shuffle=True, batch_size=batch_size)\n",
     "    \n",
-    "    print('INFO')\n",
+    "    print('INFO:')\n",
     "    print('Train shape:',y_train.shape[0])\n",
     "    print('Val shape:',y_val.shape[0])\n",
     "    print('Test shape:',y_test.shape[0])\n",
@@ -1458,6 +1459,7 @@
     }
    ],
    "source": [
+    "\n",
     "net_C = Net_C()\n",
     "print(net_C)\n",
     "\n",
@@ -1472,15 +1474,15 @@
     "\n",
     "iterations=0 \n",
     "\n",
+    "fi= open(\"Trainning_INFO.txt\",\"w+\")\n",
+    "\n",
     "# Training loop\n",
     "for i in range(epochs):\n",
-    "    print('Epoc:',i+1)\n",
+    "    fi.write('Epoch:{}'.format(i+1))\n",
     "\n",
     "    running_loss = 0.0\n",
     "    \n",
     "    for batch_idx, (data, target) in enumerate(train_loader,0):\n",
-    "        print(batch_idx)\n",
-    "        print(data.shape)\n",
     "        data, target = Variable(data), Variable(target)\n",
     "\n",
     "        optimizer.zero_grad()\n",
@@ -1492,8 +1494,6 @@
     "        \n",
     "        running_loss = loss.item()\n",
     "        loss_.append(running_loss)\n",
-    "        print('Batch:',batch_idx+1,'<-->','Loss:',running_loss)\n",
-    "        \n",
     "        iterations+=1\n",
     "        \n",
     "        if(iterations % 60 == 0):\n",
@@ -1511,9 +1511,9 @@
     "                # Get predictions from the maximum value\n",
     "                _, predicted = torch.max(outputs.data, 1)\n",
     "                \n",
-    "                loss_val = criterion(outputs, labels) \n",
-    "                running_loss_val = loss_val.item()\n",
-    "                loss_val.append(running_loss)\n",
+    "                loss_v = criterion(outputs, labels) \n",
+    "                running_loss_val = loss_v.item()\n",
+    "                loss_val.append(running_loss_val)\n",
     "                \n",
     "\n",
     "                # Total number of labels\n",
@@ -1524,14 +1524,15 @@
     "                correct += (predicted == labels).sum().item()\n",
     "\n",
     "            accuracy = 100 * correct / total\n",
-    "            if(iterations % 500 == 0):\n",
-    "                print('Iteration: {} -- Trainning Loss: {} -- Validation loss: {} -- Accuracy: {} %'.format(iterations, loss.item(), loss_validation.item(), accuracy))\n",
-    "                \n",
+    "            if(iterations % 20 == 0):\n",
+    "                fi.write('Batch: {} -- Iteration: {} -- Trainning Loss: {} -- Validation loss: {} -- Accuracy: {} % \\n'.format(batch_idx+1, iterations, loss.item(), loss_v.item(), accuracy))\n",
+    "                                \n",
     "    scheduler.step(accuracy)\n",
     "    \n",
     "\n",
+    "fi.close()\n",
     "    \n",
-    "print('Finished Training')"
+    "print('INFO: Finished Training')"
    ]
   },
   {
@@ -1580,8 +1581,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "correct = 0\n",
     "total = 0\n",
     "d=[]\n",
@@ -1599,13 +1598,13 @@
     "        correct += (predicted == labels).sum().item()\n",
     "        \n",
     "\n",
-    "print('Accuracy of the network on the test images: %d %%' % (100 * correct / total))\n",
+    "print('INFO: Accuracy of the network on the test images: %d %%' % (100 * correct / total))\n",
     "#d=np.asarray(d)\n",
-    "print(d[0].shape)\n",
-    "print(d1[0].shape)\n",
+    "#print(d[0].shape)\n",
+    "#print(d1[0].shape)\n",
     "y_pred=torch.cat((d[0],d[1]),0)\n",
     "y_test=torch.cat((d1[0],d1[1]),0)\n",
-    "print(y_pred.shape)\n",
+    "#print(y_pred.shape)\n",
     "\n"
    ]
   },
