Data Loader 3.4 and 80k data. Classification and Regression. Dropout, LR Reduce plateau and Batch Norm

--- a/Noteboooks/SpectraNET_R.ipynb
+++ b/Noteboooks/SpectraNET_R.ipynb
@@ -41,7 +41,7 @@
     "import time\n",
     "import os\n",
     "\n",
-    "cmd='jupyter nbconvert --to python SpectraNET.ipynb'\n",
+    "cmd='jupyter nbconvert --to python SpectraNET_R.ipynb'\n",
     "os.system(cmd)\n",
     "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -59,7 +59,7 @@
    "source": [
     "N_sample=10000\n",
     "\n",
-    "def Load_Files(file_1,file_2,N_sample,classification=True):\n",
+    "def Load_Files(file_1,file_2,N_sample,classification=True,objts):\n",
     "    hdul = fits.open(file_1) # Open file 1 -- 'truth_DR12Q.fits'\n",
     "    info=hdul.info() # File info\n",
     "    columns=hdul[1].columns # File Columns \n",
@@ -87,6 +87,8 @@
     "    data_FIBERID_2=data2['FIBERID']\n",
     "    data_ID_1=data['THING_ID']\n",
     "    data_ID_2=data2['TARGETID']\n",
+    "    \n",
+    "    objts=np.asarray(objts)\n",
     "    \n",
     "    # The column 'CLASS_PERSON' have a class identifier for each spectrum: STARS=1, GALAXY=4, QSO=3 and QSO_BAL=30.\n",
     "    C_P=data['CLASS_PERSON'] #Class Person column \n",
@@ -145,10 +147,13 @@
     "\n",
     "    d={'CLASS_PERSON':cp,'Z_VI':z,'Z_CONF_PERSON':zc,'BAL_FLAG_VI':bal,'BI_CIV':bi}\n",
     "    data_0=pd.DataFrame(data=d)#.values #super database\n",
+    "    \n",
+    "    data_0=data_0.loc[(data_0['CLASS_PERSON']  100) & (data['id'] <= 200)]\n",
+    "    \n",
     "    obj=data_0.loc[data_CO_ind1]\n",
+    "    \n",
+    "    objts=np.asarray(objts)\n",
     "\n",
-    "    print(obj.shape)\n",
-    "    # Sample of objects. I chosen 2500 object per class. \n",
     "    stars=obj.loc[obj['CLASS_PERSON']==1]\n",
     "    galaxies=obj.loc[obj['CLASS_PERSON']==4]\n",
     "    qsos=obj.loc[obj['CLASS_PERSON']==3]\n",
